Update training setup with adherent and condition waiting Tweak rest-api response
